site-hugo/content/xap/11.0/dev-java/administration-and-monitoring-overview.markdown
---
type: post110
title:  Admin API
categories: XAP110
parent: none
weight: 1900
canonical: auto
---




The Admin API provides a way to administer and monitor all of XAP services and components using a simple API. The API provides information and the ability to operate on the currently running [GigaSpaces Agent](/product_overview/service-grid.html#gsa), [GigaSpaces Manager](/product_overview/service-grid.html#gsm), [GigaSpaces Container](/product_overview/service-grid.html#gsc), [Lookup Service](/product_overview/service-grid.html#lus), [Processing Unit](./the-processing-unit-overview.html) and Spaces.

<br>

{{%fpanel%}}

[Admin API Overview](./administration-and-monitoring-api.html)<br>
Simple API to monitor and administer XAP services and components.

[Dump API](./dump.html)<br>
The dump feature of the Admin API allows to easily generate dump information out of GigaSpaces runtime environment.

[Administrative Alerts](./administrative-alerts.html)<br>
The alert mechanism provides the ability to receive alerts on various problematic conditions at runtime by using the Administration and Monitoring API. The alerts give indication for the health state of the system.


[SNMP Alerts](./snmp-connectivity-via-alert-logging-gateway.html)<br>
The XAP Alert interface exposes the XAP environment and the application's health state. It allows users to register listeners on one or more alert types and receive notifications once an alert has been raised or has been resolved.


{{%/fpanel%}}
